Remove dinosaur emoji from instructions

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
     <div class="secret-section">
         <div class="instructions">
-            🦖 ESPACE ou FLÈCHE HAUT pour sauter • ESC pour quitter
+             ESPACE ou FLÈCHE HAUT pour sauter • ESC pour quitter
         </div>
         
         <div class="dino-container" id="dinoContainer">
